--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 layout: home
 author_profile: true
 header:
-  image: "/assets/patryk-gradys-4pPzKfd6BEg-unsplash-crop2.jpg"
+  image: /assets/images/hydro_reactor.jpg
+  image_description: "small hydroelectric generator in Marion County, Oregon"
+  caption: "Photo credit: [**Unsplash**](https://unsplahs.com)"
 ---
