--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ author_profile: true
 header:
   image: /assets/images/hydro_reactor.jpg
   image_description: "small hydroelectric generator in Marion County, Oregon"
-  caption: "image: hydroelectric generator in Oregon - [**Unsplash**](https://unsplash.com/photos/aWrfP-P6CwI)"
+  caption: "hydroelectric generator in Oregon via [**Unsplash**](https://unsplash.com/photos/aWrfP-P6CwI) (copyright-free)"
 ---
