--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-  image: /assets/images/hydro_reactor.jpg
-  image_description: "small hydroelectric generator in Marion County, Oregon"
-  caption: "hydroelectric generator via [**Unsplash**](https://unsplash.com/photos/aWrfP-P6CwI)"
+  video:
+    id: 102998774
+    provider: vimeo
 ---
