splash page image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-  video:
-    id: 102998774
-    provider: vimeo
+  image: /assets/images/marius-unsplash.jpg
+  image_description: "marius_masalar_unsplash"
+  caption: "via [**Unsplash**](https://unsplash.com/photos/CyFBmFEsytU)"
 ---
