dice image on splash

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-  image: /assets/images/marius-unsplash.jpg
-  image_description: "marius_masalar_unsplash"
+  image: /assets/images/dice.jpg
+  image_description: "dice"
   caption: "via [**Unsplash**](https://unsplash.com/photos/CyFBmFEsytU)"
 ---
