--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 author_profile: true
 header:
-  image: /assets/images/dice.jpg
+  image: /assets/images/dice3.jpg
   image_description: "dice"
-  caption: "via [**Unsplash**](https://unsplash.com/photos/CyFBmFEsytU)"
+  caption: "via [**Unsplash**](https://unsplash.com/photos/m4sGYaHYN5o)"
 ---
