--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -1,10 +1,17 @@
 ---
 title: "Blog"
 layout: archive
-permalink: /page-archive/
+permalink: /blog/
 author_profile: true
 ---
 
-{% for post in site.pages %}
-  {% include archive-single.html %}
-{% endfor %}
+<h1>Latest Posts</h1>
+
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <p>{{ post.excerpt }}</p>
+    </li>
+  {% endfor %}
+</ul>
