adding blog page image

--- a/_pages/blog.html
+++ b/_pages/blog.html
@@ -3,9 +3,11 @@ title: "Blog"
 layout: archive
 permalink: /blog/
 author_profile: true
+header:
+  image: /assets/images/robot_piano.jpg
+  image_description: "photo of robot playing piano"
+  caption: "robot learning piano via [**Unsplash**](https://unsplash.com/photos/U3sOwViXhkY)"
 ---
-
-<h1>Latest Posts</h1>
 
 <ul>
   {% for post in site.posts %}
